Add opacity effects

--- a/Work/MK-Expert/sass/main.scss
+++ b/Work/MK-Expert/sass/main.scss
@@ -66,6 +66,9 @@ body textarea:required:valid {
 			}
 		}
 	}
+	.opa {
+		opacity: 0.5;
+	}
 	.active {
 		background-color: $brand-color;
 		padding-top: 15px;
